tests/functional/cases/fail/test_extends_cycle.coil
a: {
  @extends: ..b
}

b: {
  @extends: ..a
}
